saas/mongo/_mongo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb-ingress
  namespace: mongodb
spec:
  ingressClassName: nginx
  rules:
  - host: yisraelberman.local
    http:
      paths:
      - path: /mongo
        pathType: Prefix
        backend:
          service:
            name: mongo-mongodb
            port:
              number: 27017
